--- a/css/store_styles/productos.css
+++ b/css/store_styles/productos.css
@@ -1,23 +1,164 @@
+/* --- Estilos globales --- */
+@font-face
+{
+    font-family: 'Orbitron';
+    src: url('../../assets/fonts/Orbitron/Orbitron-VariableFont_wght.ttf');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
 *
 {
-    color: white;
+    font-family: 'Orbitron', sans-serif;
+    font-weight: normal;
 }
 
 body
 {
     margin: 0;
-
+    z-index: -1;
+    background-image: url("../../assets/img/background.png");
 }
 
+.hidden
+{
+    display: none;
+}
+
+/* Estilos del encabezado */
 header
 {
+    position: sticky;
+    top: 0;
     background-color: rgb(22, 22, 22);
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
+    padding: 0 20px 0 20px;
 }
 
 #img-logo
 {
-    width: 12rem;
+    width: 10rem;
+}
+
+.buscador
+{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    background-color: gray;
+    border-radius: 5px;
+    padding: 1px 3px 1px 3px;
+}
+
+.buscador-img
+{
+    width: 20px;
+}
+
+#barra-busqueda
+{
+    border-radius: 5px;
+    border: none;
+}
+
+.nav
+{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    gap: 20px;
+    box-sizing: border-box;
+}
+
+#info-user
+{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+#carrito
+{
+    width: 50px;
+}
+
+#carrito-user
+{
+    width: 50px;
+}
+
+/* --- Estilidados del seccion juegos --- */
+h2
+{
+    color: white;
+    text-align: center;
+    font-size: xx-large;
+    font-weight: bolder;
+}
+
+h3, p
+{
+    color: white;
+    margin: 0;
+}
+
+p
+{
+    font-size: 15px;
+    font-weight: bolder;
+}
+
+.seccion-juegos, .seccion-dlcs
+{
+    padding: 20px;
+}
+
+.contenedor-juegos, .contenedor-dlcs
+{
+    background-color: rgba(255, 255, 255, 0.07);
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 50px;
+    padding: 10px;
+    margin-bottom: 100px;
+    padding: 25px;
+}
+
+.carta-juego:hover
+{
+    box-shadow: 4px 4px 10px rgb(63, 61, 61);
+}
+
+.img-juego
+{
+    border-radius: 5px;
+}
+
+.caption
+{
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    gap: 10px;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.img-carrito
+{
+    width: 20px;
+    background-color: rgb(50, 156, 226);
+    padding: 2.5px;
+    border-radius: 5px;
+}
+
+.img-carrito:hover
+{
+    cursor: pointer;
+    background-color: rgb(97, 187, 247);
 }
