Estilado de las páginas del Dashboard

--- a/css/dashboard_styles/dashboard.css
+++ b/css/dashboard_styles/dashboard.css
@@ -1,8 +1,17 @@
 /* --- Estilos globales --- */
+@font-face
+{
+    font-family: 'Orbitron';
+    src: url('../../assets/fonts/Orbitron/Orbitron-VariableFont_wght.ttf');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
 *
 {
-    box-sizing: border-box;
-    font-weight: bold;
+    font-family: 'Orbitron', sans-serif;
+    font-weight: normal;
 }
 
 body
@@ -51,54 +60,4 @@ a:visited, a:link
 h2
 {
     text-align: center;
-}
-
-/* --- Estilos del GET --- */
-#juegos-listados
-{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.juegos-listados
-{
-    display: flex;
-    border: 1px solid white;
-    align-items: center;
-    padding: 10px;
-}
-
-.img-listados
-{
-    width: 200px;
-}
-
-.dlcs-lista
-{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.dlc-listados
-{
-    display: flex;
-    align-items: center;
-}
-
-p
-{
-    color: white;
-    padding: 0 15px;
-}
-
-#p-id, #p-nombre, #p-precio
-{
-    color: #ffb53b;
-}
-
-span
-{
-    color: white;
 }
