--- a/css/dashboard_styles/getById.css
+++ b/css/dashboard_styles/getById.css
@@ -1,3 +1,10 @@
+/* --- Estilos del GET by ID --- */
+#pestaña-seleccionada
+{
+    border-radius: 5px;
+    background-color: rgb(26, 67, 104);
+}
+
 #productos-container
 {
     display: flex;
@@ -15,6 +22,7 @@
     align-items: center;
     gap: 10px;
     background-color: #1a4368;
+    box-shadow: 2px 2px 10px rgb(50, 156, 255);
     border-radius: 5px;
     padding: 1%;
 }
@@ -23,6 +31,22 @@ label
 {
     color: white;
     font-weight: bold;
+}
+
+#tabla
+{
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    padding-left: 5px;
+}
+
+#tabla:focus
+{
+    border: 2px solid #18b9eb;
+    border-radius: 5px;
+    outline: none;
+    padding-left: 5px;
 }
 
 #idProd
