--- a/css/dashboard_styles/post.css
+++ b/css/dashboard_styles/post.css
@@ -1,3 +1,20 @@
+/* --- Estilos del POST --- */
+#pestaña-seleccionada
+{
+    border-radius: 5px;
+    background-color: rgb(26, 67, 104);
+}
+
+.hidden
+{
+    display: none;
+}
+
+.visible
+{
+    display: block;
+}
+
 #altaProducts-container
 {
     display: flex;
@@ -15,6 +32,7 @@
     align-items: center;
     gap: 10px;
     background-color: #1a4368;
+    box-shadow: 2px 2px 10px rgb(50, 156, 255);
     border-radius: 5px;
     padding: 1%;
 }
@@ -35,10 +53,32 @@ input, select
 {
     border: none;
     border-radius: 5px;
+    outline: none;
+    padding-left: 5px;
+}
+
+#nombreProd:focus, #imagenProd:focus, #precioProd:focus, #categoriaProd:focus, #tabla:focus
+{
+    border: 2px solid #18b9eb;
+    border-radius: 5px;
+    outline: none;
+    padding-left: 5px;
 }
 
 #btn-crear:hover
 {
     cursor: pointer;
     background-color: azure;
+}
+
+#preview-container
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#imagen-preview
+{
+    width: 70%;
 }
