--- a/css/dashboard_styles/put.css
+++ b/css/dashboard_styles/put.css
@@ -1,5 +1,155 @@
+/* --- Estilos del PUT --- */
+#pestaña-seleccionada
+{
+    border-radius: 5px;
+    background-color: rgb(26, 67, 104);
+}
+
+.hidden
+{
+    display: none;
+}
+
 span
 {
     color: #ffb53b;
     font-weight: bolder;
+}
+
+p
+{
+    text-align: center;
+    color: white;
+}
+
+#getProduct-container
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#getProduct-form
+{
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    background-color: #1a4368;
+    box-shadow: 2px 2px 10px rgb(50, 156, 255);
+    border-radius: 5px;
+    padding: 1%;
+}
+
+label
+{
+    color: white;
+    font-weight: bold;
+}
+
+#idProd
+{
+    border: none;
+    border-radius: 5px;
+    padding-left: 5px;
+}
+
+#btn-submit
+{
+    border: none;
+    border-radius: 5px;
+}
+
+#btn-submit:hover
+{
+    cursor: pointer;
+    background-color: azure;
+}
+
+#updateProducts-container
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2.5%;
+}
+
+#updateProducts-form
+{
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    background-color: #1a4368;
+    box-shadow: 2px 2px 10px rgb(50, 156, 255);
+    border-radius: 5px;
+    padding: 1%;
+}
+
+input, select
+{
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    padding-left: 5px;
+}
+
+#idProd:focus, #nombreProd:focus, #imagenProd:focus, #precioProd:focus, #categoriaProd:focus
+{
+    border: 2px solid #18b9eb;
+    border-radius: 5px;
+    outline: none;
+    padding-left: 5px;
+}
+
+#getId-list
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#producto-encontrado
+{
+    display: flex;
+    align-items: center;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    padding: 1%;
+    gap: 2%;
+}
+
+.img-listados
+{
+    width: 30%;
+}
+
+h3
+{
+    color: white;
+}
+
+p
+{
+    color: white;
+}
+
+#updateProduct_button
+{
+    margin-top: 1.5%;
+    border: none;
+    border-radius: 5px;
+}
+
+#updateProduct_button:hover
+{
+    cursor: pointer;
+    background-color: azure;
 }
